Fixes for Edge and IE Update to sponsors styles to fix wrapping issue Added polyfill so includes fun works on IE

--- a/frontend/stylesheets/components/_sponsors.scss
+++ b/frontend/stylesheets/components/_sponsors.scss
@@ -12,15 +12,13 @@
 
 .ictcg-supports-logos__link {
   margin: govuk-spacing(3) govuk-spacing(3) 0  0;
-  $total-margin: calc(2 * #{govuk-spacing(3)});
 
-  @include supports-link-spacing($total-margin);
+  @include supports-link-spacing($spacing: govuk-spacing(3));
 
   @include govuk-media-query ('tablet') {
     margin: govuk-spacing(5) govuk-spacing(5) 0 0;
-    $total-margin: calc(2 * #{govuk-spacing(5)});
     
-    @include supports-link-spacing($total-margin);
+    @include supports-link-spacing($spacing: govuk-spacing(5));
   }
   
   display: flex;
